Grammar/tigerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 D:\\~Compilador\\!yatc\\Grammar\\tiger.g 2014-03-10 18:42:49

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019

 
	using System;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace YATC.Grammar
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class tigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIAS_DECL", "AND", "ARGS_FIELDS", "ARRAYKEY", "ARRAY_ACCESS", "ARRAY_DECL", "ARRAY_INST", "ASCII_ESC", "ASSIGN", "BEGIN_COMMENT", "BREAK", "BREAKKEY", "COLON", "COMMA", "COMMENTARY", "DECL_BLOCK", "DIGIT", "DIV", "DOKEY", "DOT", "ELSEKEY", "ENDKEY", "END_COMMENT", "EQ", "ESC_SEQ", "EXPR_SEQ", "FIELDS_INST", "FIELD_ACCESS", "FIELD_ACCESS_TERMINAL", "FIELD_INST", "FILL_IN_TYPE", "FOR", "FORKEY", "FUNCTIONKEY", "FUN_CALL", "FUN_DECL", "FUN_DECL_SEQ", "FUN_TYPE_WRAPPER", "GT", "GTEQ", "ID", "IF", "IFKEY", "INKEY", "INT", "INTKEY", "LBRACKET", "LET", "LETKEY", "LETTER", "LKEY", "LPAREN", "LT", "LTEQ", "MINUS", "MULT", "NEG", "NIL", "NILKEY", "NOTEQ", "OFKEY", "OR", "PARAM_DECL", "PLUS", "PRINTABLE_CHARACTER", "PROGRAM", "QUOTE", "RBRACKET", "RECORD_DECL", "RECORD_INST", "RKEY", "RPAREN", "SEMI", "STRING", "STRINGKEY", "THENKEY", "TOKEY", "TYPE", "TYPEKEY", "TYPE_DECL", "TYPE_DECL_SEQ", "TYPE_FIELD", "VARKEY", "VAR_ACCESS", "VAR_DECL", "WHILE", "WHILEKEY", "WS"
	};
	public const int EOF=-1;
	public const int ALIAS_DECL=4;
	public const int AND=5;
	public const int ARGS_FIELDS=6;
	public const int ARRAYKEY=7;
	public const int ARRAY_ACCESS=8;
	public const int ARRAY_DECL=9;
	public const int ARRAY_INST=10;
	public const int ASCII_ESC=11;
	public const int ASSIGN=12;
	public const int BEGIN_COMMENT=13;
	public const int BREAK=14;
	public const int BREAKKEY=15;
	public const int COLON=16;
	public const int COMMA=17;
	public const int COMMENTARY=18;
	public const int DECL_BLOCK=19;
	public const int DIGIT=20;
	public const int DIV=21;
	public const int DOKEY=22;
	public const int DOT=23;
	public const int ELSEKEY=24;
	public const int ENDKEY=25;
	public const int END_COMMENT=26;
	public const int EQ=27;
	public const int ESC_SEQ=28;
	public const int EXPR_SEQ=29;
	public const int FIELDS_INST=30;
	public const int FIELD_ACCESS=31;
	public const int FIELD_ACCESS_TERMINAL=32;
	public const int FIELD_INST=33;
	public const int FILL_IN_TYPE=34;
	public const int FOR=35;
	public const int FORKEY=36;
	public const int FUNCTIONKEY=37;
	public const int FUN_CALL=38;
	public const int FUN_DECL=39;
	public const int FUN_DECL_SEQ=40;
	public const int FUN_TYPE_WRAPPER=41;
	public const int GT=42;
	public const int GTEQ=43;
	public const int ID=44;
	public const int IF=45;
	public const int IFKEY=46;
	public const int INKEY=47;
	public const int INT=48;
	public const int INTKEY=49;
	public const int LBRACKET=50;
	public const int LET=51;
	public const int LETKEY=52;
	public const int LETTER=53;
	public const int LKEY=54;
	public const int LPAREN=55;
	public const int LT=56;
	public const int LTEQ=57;
	public const int MINUS=58;
	public const int MULT=59;
	public const int NEG=60;
	public const int NIL=61;
	public const int NILKEY=62;
	public const int NOTEQ=63;
	public const int OFKEY=64;
	public const int OR=65;
	public const int PARAM_DECL=66;
	public const int PLUS=67;
	public const int PRINTABLE_CHARACTER=68;
	public const int PROGRAM=69;
	public const int QUOTE=70;
	public const int RBRACKET=71;
	public const int RECORD_DECL=72;
	public const int RECORD_INST=73;
	public const int RKEY=74;
	public const int RPAREN=75;
	public const int SEMI=76;
	public const int STRING=77;
	public const int STRINGKEY=78;
	public const int THENKEY=79;
	public const int TOKEY=80;
	public const int TYPE=81;
	public const int TYPEKEY=82;
	public const int TYPE_DECL=83;
	public const int TYPE_DECL_SEQ=84;
	public const int TYPE_FIELD=85;
	public const int VARKEY=86;
	public const int VAR_ACCESS=87;
	public const int VAR_DECL=88;
	public const int WHILE=89;
	public const int WHILEKEY=90;
	public const int WS=91;

	public tigerParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public tigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return tigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\~Compilador\\!yatc\\Grammar\\tiger.g"; } }


	    public override void ReportError(RecognitionException exc) 
		{ 
			/* Abort on first error. */
			throw new ParsingException(GetErrorMessage(exc, TokenNames), exc);
	    } 


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_a_program();
	partial void LeaveRule_a_program();

	// $ANTLR start "a_program"
	// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:218:8: public a_program : ( expr )? EOF -> ^( PROGRAM ( expr )? ) ;
	[GrammarRule("a_program")]
	public AstParserRuleReturnScope<object, IToken> a_program()
	{
		EnterRule_a_program();
		EnterRule("a_program", 1);
		TraceIn("a_program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<object, IToken> expr1 = default(AstParserRuleReturnScope<object, IToken>);

		object EOF2_tree = default(object);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		try { DebugEnterRule(GrammarFileName, "a_program");
		DebugLocation(218, 23);
		try
		{
			// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:219:2: ( ( expr )? EOF -> ^( PROGRAM ( expr )? ) )
			DebugEnterAlt(1);
			// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:219:4: ( expr )? EOF
			{
			DebugLocation(219, 4);
			// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:219:4: ( expr )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_0 = input.LA(1);

			if ((LA1_0==BREAKKEY||LA1_0==FORKEY||LA1_0==ID||LA1_0==IFKEY||(LA1_0>=INT && LA1_0<=INTKEY)||LA1_0==LETKEY||LA1_0==LPAREN||LA1_0==MINUS||LA1_0==NILKEY||(LA1_0>=STRING && LA1_0<=STRINGKEY)||LA1_0==WHILEKEY))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:219:4: expr
				{
				DebugLocation(219, 4);
				PushFollow(Follow._expr_in_a_program1145);
				expr1=expr();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_expr.Add(expr1.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(219, 11);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_a_program1149); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EOF.Add(EOF2);



			{
			// AST REWRITE
			// elements: expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 220:3: -> ^( PROGRAM ( expr )? )
			{
				DebugLocation(220, 6);
				// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:220:6: ^( PROGRAM ( expr )? )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(220, 8);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(220, 16);
				// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:220:16: ( expr )?
				if (stream_expr.HasNext)
				{
					DebugLocation(220, 16);
					adaptor.AddChild(root_1, stream_expr.NextTree());

				}
				stream_expr.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("a_program", 1);
			LeaveRule("a_program", 1);
			LeaveRule_a_program();
		}
		DebugLocation(220, 23);
		} finally { DebugExitRule(GrammarFileName, "a_program"); }
		return retval;

	}
	// $ANTLR end "a_program"

	partial void EnterRule_expr();
	partial void LeaveRule_expr();

	// $ANTLR start "expr"
	// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:222:1: expr : ( ( ID LBRACKET disjunction_expr RBRACKET OFKEY )=> array_inst | ( lvalue ASSIGN )=> assignment | disjunction_expr | record_inst | while_stat | BREAKKEY -> BREAK );
	[GrammarRule("expr")]
	private AstParserRuleReturnScope<object, IToken> expr()
	{
		EnterRule_expr();
		EnterRule("expr", 2);
		TraceIn("expr", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken BREAKKEY8 = default(IToken);
		AstParserRuleReturnScope<object, IToken> array_inst3 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> assignment4 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> disjunction_expr5 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> record_inst6 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> while_stat7 = default(AstParserRuleReturnScope<object, IToken>);

		object BREAKKEY8_tree = default(object);
		RewriteRuleITokenStream stream_BREAKKEY=new RewriteRuleITokenStream(adaptor,"token BREAKKEY");
		try { DebugEnterRule(GrammarFileName, "expr");
		DebugLocation(222, 1);
		try
		{
			// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:223:2: ( ( ID LBRACKET disjunction_expr RBRACKET OFKEY )=> array_inst | ( lvalue ASSIGN )=> assignment | disjunction_expr | record_inst | while_stat | BREAKKEY -> BREAK )
			int alt2=6;
			try { DebugEnterDecision(2, false);
			try
			{
				alt2 = dfa2.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:223:4: ( ID LBRACKET disjunction_expr RBRACKET OFKEY )=> array_inst
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(223, 53);
				PushFollow(Follow._array_inst_in_expr1185);
				array_inst3=array_inst();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, array_inst3.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:224:4: ( lvalue ASSIGN )=> assignment
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(224, 23);
				PushFollow(Follow._assignment_in_expr1198);
				assignment4=assignment();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, assignment4.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:225:4: disjunction_expr
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(225, 4);
				PushFollow(Follow._disjunction_expr_in_expr1203);
				disjunction_expr5=disjunction_expr();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, disjunction_expr5.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:226:4: record_inst
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(226, 4);
				PushFollow(Follow._record_inst_in_expr1209);
				record_inst6=record_inst();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, record_inst6.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:227:4: while_stat
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(227, 4);
				PushFollow(Follow._while_stat_in_expr1214);
				while_stat7=while_stat();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, while_stat7.Tree);

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:228:4: BREAKKEY
				{
				DebugLocation(228, 4);
				BREAKKEY8=(IToken)Match(input,BREAKKEY,Follow._BREAKKEY_in_expr1219); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_BREAKKEY.Add(BREAKKEY8);



				{
				// AST REWRITE
				// elements: 
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 229:13: -> BREAK
				{
					DebugLocation(229, 16);
					adaptor.AddChild(root_0, (object)adaptor.Create(BREAK, "BREAK"));

				}

				retval.Tree = root_0;
				}
				}

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr", 2);
			LeaveRule("expr", 2);
			LeaveRule_expr();
		}
		DebugLocation(230, 1);
		} finally { DebugExitRule(GrammarFileName, "expr"); }
		return retval;

	}
	// $ANTLR end "expr"

	partial void EnterRule_disjunction_expr();
	partial void LeaveRule_disjunction_expr();

	// $ANTLR start "disjunction_expr"
	// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:232:1: disjunction_expr : conjunction_expr ( OR ^ conjunction_expr )* ;
	[GrammarRule("disjunction_expr")]
	private AstParserRuleReturnScope<object, IToken> disjunction_expr()
	{
		EnterRule_disjunction_expr();
		EnterRule("disjunction_expr", 3);
		TraceIn("disjunction_expr", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken OR10 = default(IToken);
		AstParserRuleReturnScope<object, IToken> conjunction_expr9 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> conjunction_expr11 = default(AstParserRuleReturnScope<object, IToken>);

		object OR10_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "disjunction_expr");
		DebugLocation(232, 1);
		try
		{
			// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:233:2: ( conjunction_expr ( OR ^ conjunction_expr )* )
			DebugEnterAlt(1);
			// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:233:4: conjunction_expr ( OR ^ conjunction_expr )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(233, 4);
			PushFollow(Follow._conjunction_expr_in_disjunction_expr1248);
			conjunction_expr9=conjunction_expr();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, conjunction_expr9.Tree);
			DebugLocation(233, 21);
			// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:233:21: ( OR ^ conjunction_expr )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==OR))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:233:22: OR ^ conjunction_expr
					{
					DebugLocation(233, 24);
					OR10=(IToken)Match(input,OR,Follow._OR_in_disjunction_expr1251); if (state.failed) return retval;
					if (state.backtracking == 0) {
					OR10_tree = (object)adaptor.Create(OR10);
					root_0 = (object)adaptor.BecomeRoot(OR10_tree, root_0);
					}
					DebugLocation(233, 26);
					PushFollow(Follow._conjunction_expr_in_disjunction_expr1254);
					conjunction_expr11=conjunction_expr();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, conjunction_expr11.Tree);

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("disjunction_expr", 3);
			LeaveRule("disjunction_expr", 3);
			LeaveRule_disjunction_expr();
		}
		DebugLocation(234, 1);
		} finally { DebugExitRule(GrammarFileName, "disjunction_expr"); }
		return retval;

	}
	// $ANTLR end "disjunction_expr"

	partial void EnterRule_assignment();
	partial void LeaveRule_assignment();

	// $ANTLR start "assignment"
	// D:\\~Compilador\\!yatc\\Grammar\\tiger.g:236:1: assignment : lvalue ASSIGN ^ ( ( ID LBRACKET disjunction_expr RBRACKET OFKEY )=> array_inst | disjunction_expr | record_inst ) ;
	[GrammarRule("assignment")]
	private AstParserRuleReturnScope<object, IToken> assignment()
	{
		EnterRule_assignment();
		EnterRule("assignment", 4);
		TraceIn("assignment", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);
